--- a/lib/tasktrackaspa_web/templates/layout/app.html.eex
+++ b/lib/tasktrackaspa_web/templates/layout/app.html.eex
@@ -25,6 +25,7 @@
       </main>
 
     </div> <!-- /container -->
+    <%= render_gon_script(@conn) %>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
